feat: updated how create endpoint works
